<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/editTextLayout"
        style="?textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            style="?textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false" />

</com.google.android.material.textfield.TextInputLayout>